add shell command

--- a/uni-app/manifest.json
+++ b/uni-app/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "test1",
-    "appid" : "__UNI__34B280B",
+    "appid" : "__UNI__67F4D27",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
